--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 ############################################################
 
 # This is the config file for Server Essentials.
-# This config was generated for version 1.79.4
+# This config was generated for version 1.79.5
 
 # If you experience any issues please make sure that:-
 #     - Numeric values don't include any quotation marks or apostrophes.
@@ -238,3 +238,10 @@ back-blacklist:
 # Set to 0 to Disable
 # Restart Required
 back-cooldown: 30
+# How many Seconds the Player has to wait before they are returned to their previous location
+# Set to '0' to Disable
+back-teleport: 5
+# Enable or Disable the ability to stop Teleportation when the Player Moves
+# Only works if 'back-teleport' is higher than 0
+# Default: true
+back-movement-cancel: true
